--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
-<footer>
+<footer class="text-md block bg-primary text-white text-right pb-2">
     &copy; IVOA.net. Contact the <a href="mailto:ivoadoc@ivoa.net">IVOA Webmaster</a>
 </footer>
