--- a/layouts/partials/page-dates.html
+++ b/layouts/partials/page-dates.html
@@ -1,4 +1,4 @@
-<div class="text-medium-gray italic text-right m-5">
+<div class="text-medium-gray italic text-right mb-5 mt-5">
     {{- with .Date }}
     <strong>Created:</strong> <span title="{{ .UTC.Format "January 02, 2006 - 15:04 MST" }}">{{ .Local.Format "January 02, 2006 - 15:04 MST" }}</span>
     <br/>
