--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,1 +1,1 @@
-<script src="{{ .Site.Home.Permalink}}/js/main.js" async></script>
+<script src="{{ trim .RelPermalink "/" }}/js/interaction.js" async></script>
