--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,1 +1,1 @@
-<script src="{{ trim .RelPermalink "/" }}/js/interaction.js" async></script>
+<script src='{{ "js/interaction.js" | relURL }}'></script>
