Added the carousel, adjusted styles

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
-<footer class="text-md block bg-primary text-white text-right pb-2">
+<footer class="text-md block bg-primary text-white text-right pb-2 pr-1">
     &copy; IVOA.net. Contact the <a class="text-accent hover:text-accent-hover" href="mailto:ivoadoc@ivoa.net">IVOA Webmaster</a>
 </footer>
