--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,34 +1,8 @@
 {{ define "main" }}
 
 <section class="flex flex-col md:flex-row gap-4" data-pagefind-ignore>  {{/*  Make the overall layout responsive */}}
-    <main class="carrousel w-full md:w-2/3">  {{/*  Carousel takes full width on small screens, 2/3 on larger */}}
-        {{ range $elem_index, $elem_val := where .Site.Pages "Params.tags" "intersect" (slice "banner") }}
-        {{/* No changes needed inside the carousel itself for basic responsiveness */}}
-        <div id="carrousel-{{$elem_index}}" class="carrousel-item {{ if (eq $elem_index 0) }}active{{ end }}">
-
-            {{ $featured_image := partial "func/GetFeaturedImage.html" . }}
-            <img class="carrousel-img w-full" src="{{ $featured_image }}" /> {{/*  Ensure image takes full width of carousel */}}
-
-            <div class="carrousel-title">{{ .Title }}</div>
-
-            {{ with .Params.author | default .Site.Params.author }}
-            <div class="carrousel-author">{{.}}</div>
-            {{end}}
-
-            <a href="{{ .RelPermalink }}" class="carrousel-action">
-                READ <i class="fa-solid fa-arrow-right"></i>
-            </a>
-
-        </div>
-        {{ end }}
-
-        <div class="carrousel-btn carrousel-btn-left" id="carrousel-left">
-            <i class="fa-solid fa-chevron-left"></i>
-        </div>
-
-        <div class="carrousel-btn carrousel-btn-right" id="carrousel-right">
-            <i class="fa-solid fa-chevron-right"></i>
-        </div>
+    <main class="carrousel w-full md:w-2/3">
+        {{ partial "slider.html" . }}
     </main>
 
     <aside class="right cards w-full md:w-1/3"> {{/*  Sidebar takes full width on small, 1/3 on larger */}}
