--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
         <div class="hidden md:flex flex-col">
             <!-- First Row -->
             <div class="flex items-center h-20">
-                <img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-14 w-auto mr-4">
+                <a href="/"><img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-14 w-auto mr-4"></a>
                 <span class="text-white text-2xl lg:text-2xl">International Virtual Observatory Alliance</span>
             </div>
 
