iss101 Increased font-size for nav links

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,12 +11,12 @@
             <!-- Second Row -->
             <div class="flex justify-end pb-4">
                 <div class="flex gap-8">
-                    <a href="{{ .Site.Home.Permalink}}" class="text-white hover:text-accent-hover">Home</a>
-                    <a href="{{ .Site.Home.Permalink}}astronomers/" class="text-white hover:text-accent-hover">Astronomers</a>
-                    <a href="{{ .Site.Home.Permalink}}deployers/" class="text-white hover:text-accent-hover">Deployers</a>
-                    <a href="{{ .Site.Home.Permalink}}members/" class="text-white hover:text-accent-hover">Members</a>
-                    <a href="{{ .Site.Home.Permalink}}about/" class="text-white hover:text-accent-hover">About</a>
-                    <a href="{{ .Site.Home.Permalink}}search/" class="text-white hover:text-accent-hover">Search</a>
+                    <a href="{{ .Site.Home.Permalink}}" class="text-white hover:text-accent-hover text-lg">Home</a>
+                    <a href="{{ .Site.Home.Permalink}}astronomers/" class="text-white hover:text-accent-hover text-lg">Astronomers</a>
+                    <a href="{{ .Site.Home.Permalink}}deployers/" class="text-white hover:text-accent-hover text-lg">Deployers</a>
+                    <a href="{{ .Site.Home.Permalink}}members/" class="text-white hover:text-accent-hover text-lg">Members</a>
+                    <a href="{{ .Site.Home.Permalink}}about/" class="text-white hover:text-accent-hover text-lg">About</a>
+                    <a href="{{ .Site.Home.Permalink}}search/" class="text-white hover:text-accent-hover text-lg">Search</a>
                 </div>
             </div>
         </div>
