issue110 removed extra slash

--- a/layouts/partials/sitemap.html
+++ b/layouts/partials/sitemap.html
@@ -47,11 +47,11 @@
             <div class="h-2 bg-soft-gray mb-4"></div>
             <ul class="space-y-3 menu">
                 <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents" class="text-accent hover:text-accent-hover transition-colors duration-200" >IVOA Calendar</a></li>
-                <li><a href="{{ .Site.Home.Permalink}}/members/working-groups" class="text-accent hover:text-accent-hover transition-colors duration-200" >Working Groups</a></li>
+                <li><a href="{{ .Site.Home.Permalink}}members/working-groups" class="text-accent hover:text-accent-hover transition-colors duration-200" >Working Groups</a></li>
                 <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/WebHome" class="text-accent hover:text-accent-hover transition-colors duration-200" >Twiki</a></li>
                 <li><a href="https://www.ivoa.net/documents/" class="text-accent hover:text-accent-hover transition-colors duration-200" >Documents in Progress</a></li>
-                <li><a href="{{ .Site.Home.Permalink}}/members/working-groups" class="text-accent hover:text-accent-hover transition-colors duration-200" >Mailing Lists</a></li>
-                <li><a href="{{ .Site.Home.Permalink}}/about/roadmap/" class="text-accent hover:text-accent-hover transition-colors duration-200" >IVOA Roadmap</a></li>
+                <li><a href="{{ .Site.Home.Permalink}}members/working-groups" class="text-accent hover:text-accent-hover transition-colors duration-200" >Mailing Lists</a></li>
+                <li><a href="{{ .Site.Home.Permalink}}about/roadmap/" class="text-accent hover:text-accent-hover transition-colors duration-200" >IVOA Roadmap</a></li>
             </ul>
         </div>
     </div>
