issue109 Updated styles for the table

--- a/layouts/shortcodes/my-table.html
+++ b/layouts/shortcodes/my-table.html
@@ -1,3 +1,5 @@
-<div class="overflow-x-auto prose customtable max-w-none">
-    {{ .Inner | markdownify }}
+<div class="overflow-x-auto prose max-w-none">
+    <div class="customtable">
+        {{ .Inner | markdownify }}
+    </div>
 </div>
