issue109 Changed table header bg colour to the secondary colour of the theme.

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,7 +11,7 @@
     }
 
     .prose .customtable > table thead {
-        background-color: theme('colors.primary') !important;
+        background-color: theme('colors.secondary') !important;
     }
 
     .prose .customtable > table thead > th {
