fixed sitemap headers color

--- a/layouts/_partials/sitemap.html
+++ b/layouts/_partials/sitemap.html
@@ -2,7 +2,7 @@
     <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         <!-- About the IVOA -->
         <div>
-            <h2 class="text-lg font-bold mb-2">About the IVOA</h2>
+            <h2 class="text-lg font-bold mb-2 text-white">About the IVOA</h2>
             <div class="h-2 bg-sky-blue mb-4"></div>
             <ul class="space-y-3 menu">
                 <li><a href="{{ .Site.Home.Permalink}}about/what_is_vo/" class="text-accent hover:text-accent-hover transition-colors duration-200" >What is the VO?</a></li>
@@ -17,7 +17,7 @@
 
         <!-- For Astronomers -->
         <div>
-            <h2 class="text-lg font-bold mb-2">For Astronomers</h2>
+            <h2 class="text-lg font-bold mb-2 text-white">For Astronomers</h2>
             <div class="h-2 bg-forest-green mb-4"></div>
             <ul class="space-y-3 menu">
                 <li><a href="{{ .Site.Home.Permalink}}astronomers/getting_started/" class="text-accent hover:text-accent-hover transition-colors duration-200" >Getting Started</a></li>
@@ -31,7 +31,7 @@
 
         <!-- For Developers -->
         <div>
-            <h2 class="text-lg font-bold mb-2">For Developers</h2>
+            <h2 class="text-lg font-bold mb-2 text-white">For Developers</h2>
             <div class="h-2 bg-brick-red mb-4"></div>
             <ul class="space-y-3 menu">
                 <li><a href="{{ .Site.Home.Permalink}}deployers/intro_to_vo_concepts" class="text-accent hover:text-accent-hover transition-colors duration-200" >Intro to VO Concepts</a></li>
@@ -43,7 +43,7 @@
 
         <!-- For Members -->
         <div>
-            <h2 class="text-lg font-bold mb-2">For Members</h2>
+            <h2 class="text-lg font-bold mb-2 text-white">For Members</h2>
             <div class="h-2 bg-soft-gray mb-4"></div>
             <ul class="space-y-3 menu">
                 <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents" class="text-accent hover:text-accent-hover transition-colors duration-200" >IVOA Calendar</a></li>
