--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -2,6 +2,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ $css := resources.Get "css/tailwind.css" | postCSS (dict "config" "postcss.config.js") | minify }}
+    {{- partial "favicon.html" . -}}
     <link rel="stylesheet" href="{{ $css.RelPermalink }}">
     <title>IVOA.net - International Virtual Observatory Alliance</title>
 </head>
