Fix URLs of  some resources to point on the website root (particularly for the version/branch preview websites)

--- a/layouts/_partials/header.html
+++ b/layouts/_partials/header.html
@@ -4,7 +4,7 @@
         <div class="hidden md:flex flex-col">
             <!-- First Row -->
             <div class="flex items-center h-20">
-                <a href="/"><img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-14 w-auto mr-4"></a>
+                <a href="/"><img src='{{ relURL "images/ivoa_logo.png" }}' alt="IVOA Logo" class="h-14 w-auto mr-4"></a>
                 <span class="text-white text-2xl lg:text-2xl">International Virtual Observatory Alliance</span>
             </div>
 
@@ -25,7 +25,7 @@
         <div class="md:hidden">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center space-x-3">
-                    <img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-12 w-auto">
+                    <img src='{{ relURL "images/ivoa_logo.png" }}' alt="IVOA Logo" class="h-12 w-auto">
                     <span class="text-white text-xlg">International Virtual Observatory Alliance</span>
                 </div>
                 <button
