--- a/layouts/_partials/favicon.html
+++ b/layouts/_partials/favicon.html
@@ -1,6 +1,6 @@
-<link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-<link rel="shortcut icon" href="/favicon/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+<link rel="icon" type="image/png" href='{{ relURL "favicon/favicon-96x96.png" }}' sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href='{{ relURL "favicon/favicon.svg" }}' />
+<link rel="shortcut icon" href='{{ relURL "favicon/favicon.ico" }}' />
+<link rel="apple-touch-icon" sizes="180x180" href='{{ relURL "favicon/apple-touch-icon.png" }}' />
 <meta name="apple-mobile-web-app-title" content="IVOA" />
-<link rel="manifest" href="/favicon/site.webmanifest" />
+<link rel="manifest" href='{{ relURL "favicon/site.webmanifest" }}' />
